cmake_minimum_required(VERSION 3.16)
project(leetcode C)
set(CMAKE_C_STANDARD 11)
add_library(dataStructure dataStructure.c)
add_library(leetcode_1 easy/leetcode_1.c)
add_library(leetcode_2 medium/leetcode_2.c)
add_library(leetcode_3 medium/leetcode_3.c)
add_library(leetcode_4 hard/leetcode_4.c)
add_library(leetcode_5 medium/leetcode_5.c)
add_library(leetcode_7 easy/leetcode_7.c)
add_library(leetcode_8 medium/leetcode_8.c)
add_library(leetcode_9 easy/leetcode_9.c)
add_library(leetcode_11 easy/leetcode_11.c)
add_library(leetcode_13 easy/leetcode_13.c)
add_library(leetcode_14 easy/leetcode_14.c)


add_executable(test test.c)